package main.java.br.com.frameworkPpr.boardgame.game.gamerules.GerenciadorVitoriaDerrota;

public interface Observer {
    void update(String evento);
}
